<resources>
    <string name="app_name">Oyeok</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="profile">User Profile</string>
    <string name="Oye">Oye</string>


    <string name="Rs">\u20B9</string>
    <string name="QrCode">QrCode</string>
    <string name="brokerOk">Broker Dashboard</string>
    <string name="useAsClient">See Property Rates</string>
    <string name="RegisterSignIn">Register/SignIn</string>
    <string name="signup">Signup</string>
    <string name="PayTM">PayTM</string>
    <string name="shareApp">Share App</string>
    <string name="chat_list">chat_list</string>
    <string name="supportChat">Support Chat</string>
    <string name="notifications">SupportChat</string>
    <string name="likeOnFb">Like us on Facebook</string>
    <string name="aboutUs">About us</string>
    <string name="settings">Settings</string>
    <string name="shareNo">Share &amp; Earn</string>
    <string name="updateProfile">Update Profile</string>


    <string name="head1">Get Free Oyes!</string>
    <string name="head2">Use Oyes to unlock features</string>
    <string name="head3">Buy Oyes!</string>
    <string name="text1">35</string>
    <string name="text2">100</string>
    <string name="text3">100</string>
    <string name="text4">200</string>
    <string name="text5">3000</string>
    <string name="text6">2000</string>
    <string name="text7">Save 60%</string>
    <string name="text8">INR 1,550.00</string>
    <string name="text9">INR 1500.00</string>
    <string name="invite">Per friend invited</string>
    <string name="follow">Follow</string>
    <string name="tweet">Tweet</string>

        <!--phasedseekbar String-->
    <string name="Resale">Buy/Sell</string>
    <string name="Rental">Rental</string>

    <string name="UnFurnished">Un-Furnished</string>
    <string name="SemiFurnished">Semi-Furnished</string>
    <string name="FullFurnished">Fully-Furnished</string>




    <string name="memberinfo">Member /n Info</string>


    <string-array name="searchingbrokers">
        <item>Sit back, we are searching brokers for you.</item>
    </string-array>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels_no_signup_client">
        <!--<item>@string/signup</item>-->
        <item>@string/RegisterSignIn</item>
        <item>@string/useAsClient</item>
        <item>@string/notifications</item>
        <item>@string/shareApp</item>
        <!--  <item>@string/supportChat</item> -->

        <item>@string/likeOnFb</item>
        <item>@string/aboutUs</item>
        <item>@string/brokerOk</item>
        <item>@string/settings</item>
        <!--   <item>@string/updateProfile</item> -->

    </string-array>

    <string-array name="nav_drawer_labels_no_signup_broker">
        <!--<item>@string/signup</item>-->
        <item>@string/RegisterSignIn</item>
        <item>@string/useAsClient</item>
        <item>@string/MyPortfolio</item>
        <item>@string/notifications</item>
        <item>@string/shareApp</item>
        <!--  <item>@string/supportChat</item> -->

        <item>@string/likeOnFb</item>
        <item>@string/aboutUs</item>
        <item>@string/brokerOk</item>
        <item>@string/settings</item>
        <!--   <item>@string/updateProfile</item> -->

    </string-array>

    <string-array name="Property_Furnishing_Condition">
        <item>@string/SemiFurnished</item>
        <item>@string/UnFurnished</item>

        <item>@string/FullFurnished</item>
    </string-array>

    <string-array name="nav_drawer_labels_signup_client">
        <item>@string/profile</item>
        <item>@string/useAsClient</item>
        <!--  <item>@string/supportChat</item> -->
        <item>@string/MyPortfolio</item>
        <item>@string/notifications</item>
        <!--<item>@string/brokerOk</item>-->
        <item>@string/shareApp</item>

        <item>@string/likeOnFb</item>
        <item>@string/aboutUs</item>
        <item>@string/settings</item>
        <item>@string/shareNo</item>

        <!--   <item>@string/updateProfile</item> -->

    </string-array>


    <string-array name="nav_drawer_labels_signup_broker">
        <item>@string/profile</item>
        <item>@string/MyPortfolio</item>
        <!--<item>@string/brokerOk</item>-->

        <!--  <item>@string/supportChat</item> -->
        <item>@string/notifications</item>
        <item>@string/shareApp</item>
        <item>@string/likeOnFb</item>
        <item>@string/aboutUs</item>
        <item>@string/settings</item>
        <item>@string/shareNo</item>
        <!--   <item>@string/updateProfile</item> -->
    </string-array>



    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_capture_activity_any_orientation">CaptureActivityAnyOrientation
    </string>
    <string name="title_activity_droom__chat_">Droom_Chat_Activity</string>

    <string name="type_your_message">Type your message</string>

    <string name="gcm_defaultSender_id">463092685367</string>
    <string name="api_key">AIzaSyBbURHypLRkDAI98XiI3MmTArjtKMeItjc</string>


    <string name="no_active_deal">No Active Deal</string>
    <string name="no_internet_connection">Please check your internet connection.</string>

    <string name="oye_rental_req">I am Tenant</string>
    <string name="oye_rental_avail">I am Owner</string>
    <string name="oye_sale_req">I am Buyer</string>
    <string name="oye_sale_avail">I am Seller</string>
    <string name="default_2_bhk"><![CDATA[2<sub><small>BHK</small></sub>]]></string>

    <string name="title_activity_browser">browser</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="average_rate_this_locality">Average Rate @ This Locality</string>
    <string name="already_registered">Already Registered</string>
    <string name="new_user">New User</string>
    <string name="edit">Edit</string>
    <string name="sign_up_login">Sign Up/Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="client_sign_up_content"><![CDATA[(Check locality rates,Check Building rates,\nReponse < 5 min from 50 Brokers,\nschedule site visit and close faster)]]></string>
    <string name="client_sign_up_heading">You are registering as a Customer</string>
    <string name="broker_sign_up_heading">You are registering as a Broker</string>
    <string name="broker_sign_up_content">(Get free leads,do site visits,chat with customer,\nsave time with automatic listing\nand close faster)</string>
    <string name="client_log_in_heading">You are Logging in as a Customer</string>
    <string name="broker_log_in_heading">You are Logging in as a Broker</string>
    <string name="facebook_app_id">273470946346289</string>
    <string name="crossSingupTitleClient">You are already registered as a Customer with  this Mobile Number \n Do you want to Continue as a Customer?</string>
    <string name="crossSignupMsgClient">Do you want to Continue as a Customer?</string>
</resources>