<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Grey">

            <TextView
                android:id="@+id/t1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/head1"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:id="@+id/t2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/head2"
                android:layout_below="@+id/t1"
                android:textSize="25dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="5dp"
                />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/t3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text1"
                android:textSize="25dp"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="10dp"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:id="@+id/invite"
                android:background="@drawable/rect_button"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/t4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text2"
                android:textSize="25dp"
                android:layout_below="@+id/t3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="32dp"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/tweet"
                android:id="@+id/tweet"
                android:layout_below="@+id/invite"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/twitter70p"
                android:background="@drawable/twt_button"
                android:textColor="@color/Cyan"
                />
            <TextView
                android:id="@+id/t5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text3"
                android:layout_below="@+id/t4"
                android:textSize="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="32dp"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/follow"
                android:id="@+id/tweet_follow"
                android:layout_below="@+id/tweet"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/twt_button"
                android:drawableLeft="@drawable/twitter70p"
                android:textColor="@color/Cyan"
                />
            <TextView
                android:id="@+id/t6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text4"
                android:layout_below="@+id/t5"
                android:textSize="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="32dp"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="Follow"
                android:id="@+id/follow"
                android:layout_below="@+id/tweet_follow"
                android:background="@drawable/rect_button"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Grey"
            android:layout_below="@+id/layout3"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/t7"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/head3"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                />
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout4"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/t8"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text5"
                android:textSize="25dp"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/t9"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text7"
                android:textSize="20dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@+id/t8"
                android:layout_marginLeft="15dp"
                android:textColor="@color/Red"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/text8"
                android:id="@+id/scheme1"
                android:background="@drawable/scheme_btn"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/Purple"
                />
            <TextView
                android:id="@+id/t10"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text6"
                android:textSize="25dp"
                android:layout_below="@+id/t9"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                />
            <TextView
                android:id="@+id/t11"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text7"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@+id/t10"
                android:layout_marginLeft="15dp"
                android:layout_below="@+id/t9"
                android:textColor="@color/Red"
                />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/text9"
                android:id="@+id/scheme2"
                android:layout_below="@+id/scheme1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/scheme_btn"
                android:textColor="@color/Purple"
                />


            </RelativeLayout>

    </RelativeLayout>
</ScrollView>