<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/custom_color_darkblue">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="2.5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/sign_up_login"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/greenish_blue"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.7"
        android:id="@+id/textView21" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.3"
        android:gravity="center">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:id="@+id/profile_pic"
                android:foregroundGravity="center|center_horizontal"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_profile"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/editProfile_pic"
                android:layout_gravity="right|bottom"
                android:background="@drawable/gradient_edit_profile_pic"
                android:src="@drawable/edit_profile_pic"
                />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2.5"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/new_user"
            android:layout_weight="1"

            android:background="@drawable/gradient_greenish_blue"
            android:id="@+id/new_user_tab"
            android:layout_margin="5dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:onClick="onClickNewUser" />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/already_registered"

            android:id="@+id/already_registered_tab"

            android:textColor="@color/Black"
            android:background="@drawable/gradient_box"
            android:textStyle="bold"
            android:onClick="onClickOldUser" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">
        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:hint="@string/name"
            android:maxLines="1"

            android:background="@drawable/gradient_text"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:background="@drawable/gradient_text"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:layout_weight="5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_weight="1.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_sign_up_heading"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/greenish_blue"
            android:textStyle="bold"
            android:id="@+id/tvheading"
            android:textSize="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/client_sign_up_content"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:id="@+id/tvcontent" />


    </LinearLayout>
    <Button

        android:id="@+id/submitprofile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@color/greenish_blue"
        android:textColor="@android:color/white"

        android:text="Register as a Customer" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="OR"
            android:textColor="@color/dark_white"
            android:gravity="center"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
        </LinearLayout>

        <Button
            android:id="@+id/g_sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Sign Out"
            android:layout_weight="1"
            android:drawableLeft="@drawable/googleplus"
            android:textAllCaps="false"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#3b5998"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            >
            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                fb:theme="@style/Widget.AppCompat.Toolbar"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>





</LinearLayout>


</LinearLayout>

